# mytui

./: .gitignore  ASM_OPTIMIZATIONS.md  CMakeLists.txt  LICENSE  Makefile  README.md  build.md
build_cmake/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  asm_demo  asm_showcase  cmake_install.cmake  demo  simple_benchmark  tui-config.cmake
cmake/: tui-config.cmake.in
examples/: asm_demo.cpp  asm_showcase.cpp  demo.cpp  dropdown_demo.cpp  simple_benchmark.cpp  ui_components_demo.cpp
include/: asm_optimized.h  buffer.h  checkbox.h  colors.h  component_clipping.h  dropdown_menu.h  list_box.h  mouse_handler.h  password_input.h  progress_bar.h  radio_buttons.h  status_bar.h  text_input.h  tui_app.h  window.h
src/: asm_optimized.cpp  buffer.cpp  button.cpp  checkbox.cpp  dropdown_menu.cpp  list_box.cpp  mouse_handler.cpp  password_input.cpp  progress_bar.cpp  radio_buttons.cpp  status_bar.cpp  text_input.cpp  tui_app.cpp  window.cpp
